RESOLVED FIXED 54743
Minimal build broken
https://bugs.webkit.org/show_bug.cgi?id=54743
Summary Minimal build broken
Philippe Normand
Reported 2011-02-18 06:46:22 PST
Final link complains about missing symbols: InspectorController::setInspectorExtensionAPI InspectorController::dispatchMessageFromFrontend In the InspectorController.cpp they are ifdef'd ENABLE(JAVASCRIPT_DEBUGGER) whereas they are not conditionally defined in the header file. See patch :)
Attachments
proposed patch (2.59 KB, patch)
2011-02-18 06:48 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2011-02-18 06:48:14 PST
Created attachment 82954 [details] proposed patch
Oleg Romashin (:romaxa)
Comment 2 2011-02-22 16:03:15 PST
Works, good, can anyone push this patch?
WebKit Commit Bot
Comment 3 2011-02-22 21:22:38 PST
Comment on attachment 82954 [details] proposed patch Clearing flags on attachment: 82954 Committed r79394: <http://trac.webkit.org/changeset/79394>
WebKit Commit Bot
Comment 4 2011-02-22 21:22:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.