2011-02-22  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        Minimal build broken
        https://bugs.webkit.org/show_bug.cgi?id=54743

        Moved the code of setInspectorExtensionAPI and
        dispatchMessageFromFrontend out of #if
        ENABLE(JAVASCRIPT_DEBUGGER) to fix link error of the minimal build.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::setInspectorExtensionAPI):
        (WebCore::InspectorController::dispatchMessageFromFrontend):

Canonical link: https://commits.webkit.org/69314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79394 268f45cc-cd09-0410-ab3c-d52691b4dbfc